# Lausegeneraattori_tiralabra2021

./: .coveragerc  .gitignore  README.md  app.py  pyproject.toml
dokumentaatio/: käyttöohje.md  lauseenmuodostuksen_tuloksia.md  maarittelydokumentti.md  parhaita_lauseita.md  testausdokumentti.md  toteutusdokumentti.md  tuntikirjanpito.md  viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md  viikkoraportti_lopullinen.md  viikkorapotti_5.md
dokumentaatio/syotteet/: adalmiinan_helmi.md  annan_nuoruusvuodet.md  yksinkertainen_teksti_1.md
src/: alipuu.py  lauseenmuodostus.py  markov.py  tekstinkasittely.py  trie.py  triesolmu.py
src/testit/: alipuu_test.py  trie_test.py  triesolmu_test.py
src/tests/: lauseenmuodostus_test.py  tekstinkäsittely_test.py  trie_test.py  triesolmu_test.py
templates/: index.html
