[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Milla Kelhu <milla.kelhu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^5.5"
pylint = "^2.11.1"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
